--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "Projeto RAV",
   "main": "index.js",
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && flask run\""
+    "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && flask run\"",
+    "start:serve": "serve -s build"
   },
+
   "author": "",
   "license": "ISC",
   "dependencies": {
