--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Projeto RAV",
   "main": "index.js",
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -12,11 +11,11 @@
     "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && flask run\"",
     "start:serve": "serve -s build"
   },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
